<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">勿忘我</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="mainactivity_tab_item_normal_normal_text">常用</string>
    <string name="mainactivity_tab_item_normal_search_text">查询</string>
    <string name="mainactivity_tab_item_normal_setting_text">设置</string>
    <string name="mainactivity_tab_item_normal_help_text">帮助</string>
    <string name="title_activity_normal">常用</string>
    <string name="title_activity_search">查询</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_executing">执行中</string>
    <string name="title_activity_delete">回收站</string>
    <string name="title_activity_finish">完成</string>
    <string name="title_activity_nobegin">未开始</string>


    <string name="listview_item_btn_nowbegin">马上开始</string>
    <string name="listview_item_btn_back">还原</string>
    <string name="listview_item_btn_delay">延后</string>
    <string name="listview_item_btn_detail">提醒时间</string>
    <string name="listview_item_btn_delete">回收站</string>
    <string name="listview_item_btn_finish">完成</string>
    <string name="listview_item_lv_timeoffset">执行时间段：</string>

    <string name="title_activity_note">备忘录</string>
    <string name="title_activity_setting_normal">基本设置</string>
    <string name="title_activity_setting_warn">提醒</string>
    <string name="title_activity_setting_backup">备份</string>
    <string name="title_activity_add">添加</string>
    <string name="title_activity_help">帮助</string>
    <string name="return_text">返回</string>
    <string name="save_text">保存</string>
    <string name="add_tv_content">内容：</string>
    <string name="add_btn_import">导入</string>
    <string name="add_tv_createdate">创建时间：</string>
    <string name="add_tv_quickadd">设置：</string>
    <string name="add_rb_halfhour">半小时</string>
    <string name="add_rb_onehour">1小时</string>
    <string name="add_rb_twohours">2小时</string>
    <string name="add_rb_fourhours">4小时</string>
    <string name="add_rb_oneday">1天后</string>
    <string name="add_rb_twodays">2天后</string>
    <string name="add_rb_threedays">3天后</string>
    <string name="add_tv_startdate">开始：</string>
    <string name="add_tv_enddate">结束：</string>
    <string name="add_tv_warntime">提醒次数：</string>
    <string name="add_btn_selectdatetime">日期...</string>
    <string name="add_btn_add_text">+</string>
    <string name="add_btn_subtract_text">-</string>
    <string name="add_btn_add_warn_text">添加提醒</string>
    <string name="add_btn_delete_warn_text">删除提醒</string>
    <string name="add_savesuccess_text">保存成功</string>
    <string name="add_savefailed_text">保存失败</string>
    <string name="add_et_error_text">提醒内容不能为空</string>
    <string name="add_btnenddate_error_text">结束日期必须大于开始日期</string>
    <string name="add_warncontrol_error_text">提醒日期必须在开始日期和结束日期中间</string>
    <string name="add_item_null">对象不存在</string>
    <string name="listview_item_finish_title_text">请输入完成情况：</string>
    <string name="listview_item_finish_content_error">内容不能为空</string>
    <string name="listview_head_text">正在更新数据...</string>
    <string name="listview_item_delete_message">是否真的放入回收站？</string>
    <string name="listview_item_delete_title_text">请输入删除原因：</string>
    <string name="listview_item_back_note">从回收站里还原</string>
    <string name="listview_item_back_title">是否真的还原？</string>
    <string name="listview_item_delay_title">请选择延后的时长：</string>
    <string name="listview_item_save_error_message">更新失败</string>
    <string name="listview_item_status_save_error_message">更新失败</string>
    <string name="listview_item_finish_lv_title_text">提醒详细信息</string>
    <string name="listview_item_item_warntimes">提醒时间如下</string>

    <string name="additem_btn_addnotice_text">提醒</string>
    <string name="additem_btn_addnote_text">备忘录</string>

    <string name="import_normal_warn">提示</string>
    <string name="import_normal_warntext">正在加载中...</string>
    <string name="import_sms_text">导入短信</string>
    <string name="import_calllog_text">导入通话记录</string>
    <string name="import_contact_text">导入通讯录</string>

    <string name="normal_title">提示</string>
    <string name="normal_confirm">确定</string>
    <string name="normal_cancel">取消</string>

    <string name="importmenu_btn_import_sms">短信</string>
    <string name="importmenu_btn_import_contact">通讯录</string>
    <string name="importmenu_btn_import_calllist">通话记录</string>
    <string name="import_calllog_empty_text">未知号码</string>

    <string name="search_title_dateoffset">时间段：</string>
    <string name="search_title_keyword">关键字：</string>
    <string name="search_btn_text">查询</string>
    <string name="search_listview_item_timeoffset">执行时间段：</string>
    <string name="search_listview_item_warntime">提醒时间</string>

    <string name="warncontrol_tv_warntype">提醒方式：</string>
    <string name="datetimeformat">yyyy-MM-dd HH:mm:ss</string>
    <string name="datetimeformat1">yyyy年MM月dd日 HH:mm</string>
    <string name="backuptypetable">backuptype</string>
    <string name="leveltable">level</string>
    <string name="itemtable">item</string>
    <string name="itemstatustable">itemstatus</string>
    <string name="itemnoticetable">itemnotice</string>
    <string name="permissiontable">permission</string>
    <string name="statustable">Status</string>
    <string name="noticetable">notice</string>
    <string name="databaseName">warnMe</string>
    <string name="databaseVersion">1</string>

    <array name="initSql">
        <item>CREATE TABLE BackupType (
            id INT PRIMARY KEY,
            name VARCHAR( 20 )
            );</item>
        <item>CREATE TABLE Item (
            ID INT PRIMARY KEY,
            content VARCHAR( 500 ),
            level INT,
            createDatetime INTEGER,
            beginDatetime INTEGER,
            endDatetime INTEGER,
            noticetime INT
            );</item>
        <item>CREATE TABLE ItemNotice (
            ID INTEGER PRIMARY KEY AUTOINCREMENT,
            itemID INT,
            noticeid INT,
            noticetime INTEGER
            );</item>
        <item>CREATE TABLE ItemStatus (
            ID INTEGER PRIMARY KEY AUTOINCREMENT,
            itemid INT,
            statusid INT,
            opdatetime INTEGER,
            note VARCHAR( 200 )
            );</item>
        <item>CREATE TABLE Notice (
            ID INT PRIMARY KEY,
            name VARCHAR( 20 ),
            enable INT,
            ringpath VARCHAR( 200 ),
            zhendongnum INT
            );</item>
        <item>CREATE TABLE Status (
            ID INT PRIMARY KEY,
            name VARCHAR( 20 )
            );</item>
        <item>CREATE TABLE Submit (
            id INTEGER PRIMARY KEY AUTOINCREMENT,
            title VARCHAR( 200 ),
            content VARCHAR( 500 ),
            contact VARCHAR( 20 )
            );</item>
        <item>CREATE TABLE Backup (
            id INTEGER PRIMARY KEY AUTOINCREMENT,
            backuptypeid INT,
            list VARCHAR( 200 ),
            backupdir VARCHAR( 200 )
            );</item>
        <item>CREATE TABLE BaseInfo (
            id INTEGER PRIMARY KEY AUTOINCREMENT,
            number VARCHAR( 20 ),
            shownum INT,
            showday INT,
            backupdir VARCHAR( 200 ),
            mailtype VARCHAR( 20 ),
            mailname VARCHAR( 20 ),
            mailpassword VARCHAR( 20 ),
            smtp VARCHAR( 20 ),
            pop3 VARCHAR( 20 ),
            testmailresult INT
            );</item>
        <item>CREATE TABLE Permission (
            ID INT PRIMARY KEY,
            name VARCHAR( 20 ),
            Enable INT
            );</item>
        <item>CREATE TABLE Level (
            id INT PRIMARY KEY,
            name VARCHAR( 20 )
            );</item>
        <item>CREATE VIEW itemCurrentStatus
            AS
            select * from itemstatus group by itemid;
        </item>
    </array>
    <array name="initData">
        <item>insert into backuptype(id,name) values(0,"'本地备份'");</item>
        <item>insert into backuptype(id,name) values(1,"'邮箱备份'");</item>
        <item>insert into status(id,name) values(0,"'执行中'");</item>
        <item>insert into status(id,name) values(1,"'完成'");</item>
        <item>insert into status(id,name) values(2,"'未开始'");</item>
        <item>insert into status(id,name) values(3,"'回收站'");</item>
        <item>insert into status(id,name) values(4,"'备忘录'");</item>
        <item>insert into notice(id,name,enable,ringpath,zhendongnum) values(0,"'消息'",0,"''",0);</item>
        <item>insert into notice(id,name,enable,ringpath,zhendongnum) values(1,"'震动'",0,"''",0);</item>
        <item>insert into notice(id,name,enable,ringpath,zhendongnum) values(2,"'铃声'",0,"''",0);</item>
        <item>insert into notice(id,name,enable,ringpath,zhendongnum) values(3,"'短信'",0,"''",0);</item>
        <item>insert into notice(id,name,enable,ringpath,zhendongnum) values(4,"'语音'",0,"''",0);</item>
        <item>insert into permission(id,name,enable) values(0,"'通讯录'",0);</item>
        <item>insert into permission(id,name,enable) values(1,"'短信'",0);</item>
        <item>insert into permission(id,name,enable) values(2,"'通讯记录'",0);</item>
        <item>insert into permission(id,name,enable) values(3,"'语音'",0);</item>
        <item>insert into level(id,name) values(0,"'低'");</item>
        <item>insert into level(id,name) values(1,"'中'");</item>
        <item>insert into level(id,name) values(2,"'高'");</item>
    </array>
    <array name="delaytimes">
        <item>1小时</item>
        <item>2小时</item>
        <item>4小时</item>
        <item>1天</item>
        <item>2天</item>
        <item>4天</item>
        <item>1周</item>
    </array>

    <string name="title_activity_add_item">AddItem</string>
    <string name="title_activity_normal_note">Normal_Note</string>
    <string name="title_activity_import__sms">Import_SMS</string>
    <string name="title_activity_import__calllog">Import_Calllog</string>
    <string name="title_activity_import__contact">Import_Contact</string>
    <string name="title_activity_import__sms__thead_id">Import_SMS_TheadID</string>

</resources>
