<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/normalmargin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/btn_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/add_tv_content"/>

            <TextView
                android:id="@+id/listview_item_execute_lv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="111111111111111111" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/line1"
                android:scaleType="fitXY" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listview_item_lv_timeoffset"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/listview_item_execute_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="222222222"
                        android:layout_weight="1" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-" />

                    <TextView
                        android:id="@+id/listview_item_execute_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="333333333333" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/line1"
                android:scaleType="fitXY" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/background"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/listview_item_execute_btn_warntimes"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/normal_listview_item_button_height"
                    android:background="@drawable/menubackground"
                    android:text="@string/listview_item_btn_detail"
                    android:textSize="@dimen/normal_listview_item_button_text_size"
                    android:layout_weight="1" />

                <ImageView android:id="@+id/listview_item_execute_iv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/fenge"
                    android:scaleType="fitXY" />

                <Button
                    android:id="@+id/listview_item_execute_btn_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/normal_listview_item_button_height"
                    android:background="@drawable/menubackground"
                    android:text="@string/title_activity_finish"
                    android:textSize="@dimen/normal_listview_item_button_text_size"
                    android:layout_weight="1" />

                <ImageView android:id="@+id/listview_item_execute_iv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/fenge"
                    android:scaleType="fitXY" />

                <Button
                    android:id="@+id/listview_item_execute_btn_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/normal_listview_item_button_height"
                    android:background="@drawable/menubackground"
                    android:text="@string/listview_item_btn_delay"
                    android:textSize="@dimen/normal_listview_item_button_text_size"
                    android:layout_weight="1" />

                <ImageView android:id="@+id/listview_item_execute_iv_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/fenge"
                    android:scaleType="fitXY" />

                <Button
                    android:id="@+id/listview_item_execute_btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/normal_listview_item_button_height"
                    android:background="@drawable/menubackground"
                    android:text="@string/title_activity_delete"
                    android:textSize="@dimen/normal_listview_item_button_text_size"
                    android:layout_weight="1" />



            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>