<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.donotforgetme.Activities.MainActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/titlebar" />
    <FrameLayout
        android:id="@+id/tabs_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:scaleType="fitXY"/>
    <RadioGroup
        android:id="@+id/tabs_item"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/tab_item_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/mainactivity_tab_item_normal_normal_text"
            android:layout_weight="1.0"
            android:gravity="center"
            android:singleLine="true"
            android:checked="true"
            android:textColor="@color/radiobutton_selector"
            android:drawableTop="@drawable/radiobutton_home_selector"
            android:textSize="12dp"
            />
        <RadioButton
            android:id="@+id/tab_item_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/mainactivity_tab_item_normal_search_text"
            android:layout_weight="1.0"
            android:gravity="center"
            android:singleLine="true"
            android:checked="false"
            android:textColor="@color/radiobutton_selector"
            android:drawableTop="@drawable/radiobutton_search_selector"
            android:textSize="12dp"
            />
        <RadioButton
            android:id="@+id/tab_item_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:singleLine="true"
            android:checked="false"
            android:background="@drawable/add"
            android:layout_weight="1.0"
            android:layout_margin="2dp"
            />


        <RadioButton
            android:id="@+id/tab_item_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/mainactivity_tab_item_normal_setting_text"
            android:layout_weight="1.0"
            android:gravity="center"
            android:singleLine="true"
            android:checked="false"
            android:textColor="@color/radiobutton_selector"
            android:drawableTop="@drawable/radiobutton_setting_selector"
            android:textSize="12dp"
            />
        <RadioButton
            android:id="@+id/tab_item_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/mainactivity_tab_item_normal_help_text"
            android:layout_weight="1.0"
            android:gravity="center"
            android:singleLine="true"
            android:checked="false"
            android:textColor="@color/radiobutton_selector"
            android:drawableTop="@drawable/radiobutton_help_selector"
            android:textSize="12dp"
            />
        </RadioGroup>

</LinearLayout>
